src/main/webapp/js/hippolytus/HippolytusParser.js
// Generated from Hippolytus.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var HippolytusListener = require('./HippolytusListener').HippolytusListener;
var grammarFileName = "Hippolytus.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'//'", "'*'", null, null, "':'", "'-'", "'='", 
                     null, "'#ontology'", null, null, null, null, "'_'", 
                     "'~'", "'['", "']'", "'{'", "'}'", "'!'", null, null, 
                     "';'", "','", "'.'", null, null, "'@'", "'@vl:'", "'@vi:'", 
                     null, "'@cfr:'" ];

var symbolicNames = [ null, "REM_BEG", "HEAD_LINE", "NUM", "SEP", "COLON", 
                      "DASH", "EQ", "HASHTAG", "GENERAL", "WORD", "LAT_WORD", 
                      "GRC_WORD", "NEWLINE", "UNDERSCORE", "TILDE", "L_BRAC", 
                      "R_BRAC", "L_CURL", "R_CURL", "NOT", "PRE_PUNCT", 
                      "PUNCT", "SEMICOLON", "COMMA", "DOT", "WS", "EXT_PUNCT", 
                      "AT", "VLTYPE", "VITYPE", "BIBL", "CFR", "ANY" ];

var ruleNames =  [ "start", "note", "headLine", "eol", "ref", "numRef", 
                   "colon", "wordRefRanges", "wordRefRange", "firstWordRef", 
                   "midWordRef", "lastWordRef", "singleWordRef", "anchor", 
                   "sep", "wordRef", "item", "type", "general", "freeText", 
                   "token", "rem", "extTriples", "extTriple", "subject", 
                   "predicateObjectList", "predicate", "objectList", "object", 
                   "biblRef", "cfrRef", "conds", "cond", "openCond", "varId", 
                   "vlId", "viId", "not", "closeCond" ];

function HippolytusParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

HippolytusParser.prototype = Object.create(antlr4.Parser.prototype);
HippolytusParser.prototype.constructor = HippolytusParser;

Object.defineProperty(HippolytusParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

HippolytusParser.EOF = antlr4.Token.EOF;
HippolytusParser.REM_BEG = 1;
HippolytusParser.HEAD_LINE = 2;
HippolytusParser.NUM = 3;
HippolytusParser.SEP = 4;
HippolytusParser.COLON = 5;
HippolytusParser.DASH = 6;
HippolytusParser.EQ = 7;
HippolytusParser.HASHTAG = 8;
HippolytusParser.GENERAL = 9;
HippolytusParser.WORD = 10;
HippolytusParser.LAT_WORD = 11;
HippolytusParser.GRC_WORD = 12;
HippolytusParser.NEWLINE = 13;
HippolytusParser.UNDERSCORE = 14;
HippolytusParser.TILDE = 15;
HippolytusParser.L_BRAC = 16;
HippolytusParser.R_BRAC = 17;
HippolytusParser.L_CURL = 18;
HippolytusParser.R_CURL = 19;
HippolytusParser.NOT = 20;
HippolytusParser.PRE_PUNCT = 21;
HippolytusParser.PUNCT = 22;
HippolytusParser.SEMICOLON = 23;
HippolytusParser.COMMA = 24;
HippolytusParser.DOT = 25;
HippolytusParser.WS = 26;
HippolytusParser.EXT_PUNCT = 27;
HippolytusParser.AT = 28;
HippolytusParser.VLTYPE = 29;
HippolytusParser.VITYPE = 30;
HippolytusParser.BIBL = 31;
HippolytusParser.CFR = 32;
HippolytusParser.ANY = 33;

HippolytusParser.RULE_start = 0;
HippolytusParser.RULE_note = 1;
HippolytusParser.RULE_headLine = 2;
HippolytusParser.RULE_eol = 3;
HippolytusParser.RULE_ref = 4;
HippolytusParser.RULE_numRef = 5;
HippolytusParser.RULE_colon = 6;
HippolytusParser.RULE_wordRefRanges = 7;
HippolytusParser.RULE_wordRefRange = 8;
HippolytusParser.RULE_firstWordRef = 9;
HippolytusParser.RULE_midWordRef = 10;
HippolytusParser.RULE_lastWordRef = 11;
HippolytusParser.RULE_singleWordRef = 12;
HippolytusParser.RULE_anchor = 13;
HippolytusParser.RULE_sep = 14;
HippolytusParser.RULE_wordRef = 15;
HippolytusParser.RULE_item = 16;
HippolytusParser.RULE_type = 17;
HippolytusParser.RULE_general = 18;
HippolytusParser.RULE_freeText = 19;
HippolytusParser.RULE_token = 20;
HippolytusParser.RULE_rem = 21;
HippolytusParser.RULE_extTriples = 22;
HippolytusParser.RULE_extTriple = 23;
HippolytusParser.RULE_subject = 24;
HippolytusParser.RULE_predicateObjectList = 25;
HippolytusParser.RULE_predicate = 26;
HippolytusParser.RULE_objectList = 27;
HippolytusParser.RULE_object = 28;
HippolytusParser.RULE_biblRef = 29;
HippolytusParser.RULE_cfrRef = 30;
HippolytusParser.RULE_conds = 31;
HippolytusParser.RULE_cond = 32;
HippolytusParser.RULE_openCond = 33;
HippolytusParser.RULE_varId = 34;
HippolytusParser.RULE_vlId = 35;
HippolytusParser.RULE_viId = 36;
HippolytusParser.RULE_not = 37;
HippolytusParser.RULE_closeCond = 38;

function StartContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HippolytusParser.RULE_start;
    return this;
}

StartContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StartContext.prototype.constructor = StartContext;

StartContext.prototype.EOF = function() {
    return this.getToken(HippolytusParser.EOF, 0);
};

StartContext.prototype.headLine = function() {
    return this.getTypedRuleContext(HeadLineContext,0);
};

StartContext.prototype.note = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(NoteContext);
    } else {
        return this.getTypedRuleContext(NoteContext,i);
    }
};

StartContext.prototype.enterRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.enterStart(this);
	}
};

StartContext.prototype.exitRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.exitStart(this);
	}
};




HippolytusParser.StartContext = StartContext;

HippolytusParser.prototype.start = function() {

    var localctx = new StartContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, HippolytusParser.RULE_start);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.state = 79; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 78;
                this.note();
                this.state = 81; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===HippolytusParser.HEAD_LINE);
            break;

        case 2:
            this.state = 83;
            this.headLine();
            break;

        }
        this.state = 86;
        this.match(HippolytusParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NoteContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HippolytusParser.RULE_note;
    return this;
}

NoteContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NoteContext.prototype.constructor = NoteContext;

NoteContext.prototype.headLine = function() {
    return this.getTypedRuleContext(HeadLineContext,0);
};

NoteContext.prototype.ref = function() {
    return this.getTypedRuleContext(RefContext,0);
};

NoteContext.prototype.eol = function() {
    return this.getTypedRuleContext(EolContext,0);
};

NoteContext.prototype.item = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ItemContext);
    } else {
        return this.getTypedRuleContext(ItemContext,i);
    }
};

NoteContext.prototype.rem = function() {
    return this.getTypedRuleContext(RemContext,0);
};

NoteContext.prototype.enterRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.enterNote(this);
	}
};

NoteContext.prototype.exitRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.exitNote(this);
	}
};




HippolytusParser.NoteContext = NoteContext;

HippolytusParser.prototype.note = function() {

    var localctx = new NoteContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, HippolytusParser.RULE_note);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 88;
        this.headLine();
        this.state = 89;
        this.ref();
        this.state = 91; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 90;
            this.item();
            this.state = 93; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << HippolytusParser.HASHTAG) | (1 << HippolytusParser.GENERAL) | (1 << HippolytusParser.WORD) | (1 << HippolytusParser.L_CURL) | (1 << HippolytusParser.NOT) | (1 << HippolytusParser.VLTYPE) | (1 << HippolytusParser.VITYPE))) !== 0));
        this.state = 96;
        _la = this._input.LA(1);
        if(_la===HippolytusParser.REM_BEG) {
            this.state = 95;
            this.rem();
        }

        this.state = 98;
        this.eol();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HeadLineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HippolytusParser.RULE_headLine;
    return this;
}

HeadLineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HeadLineContext.prototype.constructor = HeadLineContext;

HeadLineContext.prototype.HEAD_LINE = function() {
    return this.getToken(HippolytusParser.HEAD_LINE, 0);
};

HeadLineContext.prototype.enterRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.enterHeadLine(this);
	}
};

HeadLineContext.prototype.exitRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.exitHeadLine(this);
	}
};




HippolytusParser.HeadLineContext = HeadLineContext;

HippolytusParser.prototype.headLine = function() {

    var localctx = new HeadLineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, HippolytusParser.RULE_headLine);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 100;
        this.match(HippolytusParser.HEAD_LINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EolContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HippolytusParser.RULE_eol;
    return this;
}

EolContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EolContext.prototype.constructor = EolContext;

EolContext.prototype.NEWLINE = function() {
    return this.getToken(HippolytusParser.NEWLINE, 0);
};

EolContext.prototype.enterRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.enterEol(this);
	}
};

EolContext.prototype.exitRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.exitEol(this);
	}
};




HippolytusParser.EolContext = EolContext;

HippolytusParser.prototype.eol = function() {

    var localctx = new EolContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, HippolytusParser.RULE_eol);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 102;
        this.match(HippolytusParser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function RefContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HippolytusParser.RULE_ref;
    return this;
}

RefContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RefContext.prototype.constructor = RefContext;

RefContext.prototype.wordRefRanges = function() {
    return this.getTypedRuleContext(WordRefRangesContext,0);
};

RefContext.prototype.colon = function() {
    return this.getTypedRuleContext(ColonContext,0);
};

RefContext.prototype.enterRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.enterRef(this);
	}
};

RefContext.prototype.exitRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.exitRef(this);
	}
};




HippolytusParser.RefContext = RefContext;

HippolytusParser.prototype.ref = function() {

    var localctx = new RefContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, HippolytusParser.RULE_ref);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 104;
        this.wordRefRanges();
        this.state = 105;
        this.colon();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NumRefContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HippolytusParser.RULE_numRef;
    return this;
}

NumRefContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NumRefContext.prototype.constructor = NumRefContext;

NumRefContext.prototype.NUM = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(HippolytusParser.NUM);
    } else {
        return this.getToken(HippolytusParser.NUM, i);
    }
};


NumRefContext.prototype.DOT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(HippolytusParser.DOT);
    } else {
        return this.getToken(HippolytusParser.DOT, i);
    }
};


NumRefContext.prototype.enterRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.enterNumRef(this);
	}
};

NumRefContext.prototype.exitRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.exitNumRef(this);
	}
};




HippolytusParser.NumRefContext = NumRefContext;

HippolytusParser.prototype.numRef = function() {

    var localctx = new NumRefContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, HippolytusParser.RULE_numRef);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 107;
        this.match(HippolytusParser.NUM);
        this.state = 114;
        _la = this._input.LA(1);
        if(_la===HippolytusParser.DOT) {
            this.state = 108;
            this.match(HippolytusParser.DOT);
            this.state = 109;
            this.match(HippolytusParser.NUM);
            this.state = 112;
            _la = this._input.LA(1);
            if(_la===HippolytusParser.DOT) {
                this.state = 110;
                this.match(HippolytusParser.DOT);
                this.state = 111;
                this.match(HippolytusParser.NUM);
            }

        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ColonContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HippolytusParser.RULE_colon;
    return this;
}

ColonContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ColonContext.prototype.constructor = ColonContext;

ColonContext.prototype.COLON = function() {
    return this.getToken(HippolytusParser.COLON, 0);
};

ColonContext.prototype.enterRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.enterColon(this);
	}
};

ColonContext.prototype.exitRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.exitColon(this);
	}
};




HippolytusParser.ColonContext = ColonContext;

HippolytusParser.prototype.colon = function() {

    var localctx = new ColonContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, HippolytusParser.RULE_colon);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 116;
        this.match(HippolytusParser.COLON);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function WordRefRangesContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HippolytusParser.RULE_wordRefRanges;
    return this;
}

WordRefRangesContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WordRefRangesContext.prototype.constructor = WordRefRangesContext;

WordRefRangesContext.prototype.wordRefRange = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WordRefRangeContext);
    } else {
        return this.getTypedRuleContext(WordRefRangeContext,i);
    }
};

WordRefRangesContext.prototype.TILDE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(HippolytusParser.TILDE);
    } else {
        return this.getToken(HippolytusParser.TILDE, i);
    }
};


WordRefRangesContext.prototype.enterRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.enterWordRefRanges(this);
	}
};

WordRefRangesContext.prototype.exitRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.exitWordRefRanges(this);
	}
};




HippolytusParser.WordRefRangesContext = WordRefRangesContext;

HippolytusParser.prototype.wordRefRanges = function() {

    var localctx = new WordRefRangesContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, HippolytusParser.RULE_wordRefRanges);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 118;
        this.wordRefRange();
        this.state = 123;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===HippolytusParser.TILDE) {
            this.state = 119;
            this.match(HippolytusParser.TILDE);
            this.state = 120;
            this.wordRefRange();
            this.state = 125;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function WordRefRangeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HippolytusParser.RULE_wordRefRange;
    return this;
}

WordRefRangeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WordRefRangeContext.prototype.constructor = WordRefRangeContext;

WordRefRangeContext.prototype.firstWordRef = function() {
    return this.getTypedRuleContext(FirstWordRefContext,0);
};

WordRefRangeContext.prototype.lastWordRef = function() {
    return this.getTypedRuleContext(LastWordRefContext,0);
};

WordRefRangeContext.prototype.midWordRef = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(MidWordRefContext);
    } else {
        return this.getTypedRuleContext(MidWordRefContext,i);
    }
};

WordRefRangeContext.prototype.singleWordRef = function() {
    return this.getTypedRuleContext(SingleWordRefContext,0);
};

WordRefRangeContext.prototype.enterRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.enterWordRefRange(this);
	}
};

WordRefRangeContext.prototype.exitRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.exitWordRefRange(this);
	}
};




HippolytusParser.WordRefRangeContext = WordRefRangeContext;

HippolytusParser.prototype.wordRefRange = function() {

    var localctx = new WordRefRangeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, HippolytusParser.RULE_wordRefRange);
    try {
        this.state = 136;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 126;
            this.firstWordRef();
            this.state = 130;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                if(_alt===1) {
                    this.state = 127;
                    this.midWordRef(); 
                }
                this.state = 132;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
            }

            this.state = 133;
            this.lastWordRef();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 135;
            this.singleWordRef();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FirstWordRefContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HippolytusParser.RULE_firstWordRef;
    return this;
}

FirstWordRefContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FirstWordRefContext.prototype.constructor = FirstWordRefContext;

FirstWordRefContext.prototype.wordRef = function() {
    return this.getTypedRuleContext(WordRefContext,0);
};

FirstWordRefContext.prototype.sep = function() {
    return this.getTypedRuleContext(SepContext,0);
};

FirstWordRefContext.prototype.numRef = function() {
    return this.getTypedRuleContext(NumRefContext,0);
};

FirstWordRefContext.prototype.anchor = function() {
    return this.getTypedRuleContext(AnchorContext,0);
};

FirstWordRefContext.prototype.enterRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.enterFirstWordRef(this);
	}
};

FirstWordRefContext.prototype.exitRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.exitFirstWordRef(this);
	}
};




HippolytusParser.FirstWordRefContext = FirstWordRefContext;

HippolytusParser.prototype.firstWordRef = function() {

    var localctx = new FirstWordRefContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, HippolytusParser.RULE_firstWordRef);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 139;
        _la = this._input.LA(1);
        if(_la===HippolytusParser.SEP || _la===HippolytusParser.COLON) {
            this.state = 138;
            this.sep();
        }

        this.state = 142;
        _la = this._input.LA(1);
        if(_la===HippolytusParser.NUM) {
            this.state = 141;
            this.numRef();
        }

        this.state = 145;
        _la = this._input.LA(1);
        if(_la===HippolytusParser.L_BRAC) {
            this.state = 144;
            this.anchor();
        }

        this.state = 147;
        this.wordRef();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MidWordRefContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HippolytusParser.RULE_midWordRef;
    return this;
}

MidWordRefContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MidWordRefContext.prototype.constructor = MidWordRefContext;

MidWordRefContext.prototype.wordRef = function() {
    return this.getTypedRuleContext(WordRefContext,0);
};

MidWordRefContext.prototype.sep = function() {
    return this.getTypedRuleContext(SepContext,0);
};

MidWordRefContext.prototype.numRef = function() {
    return this.getTypedRuleContext(NumRefContext,0);
};

MidWordRefContext.prototype.enterRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.enterMidWordRef(this);
	}
};

MidWordRefContext.prototype.exitRule = function(listener) {
    if(listener instanceof HippolytusListener ) {
        listener.exitMidWordRef(this);
	}
};




HippolytusParser.MidWordRefContext = MidWordRefContext;

HippolytusParser.prototype.midWordRef = function() {

    var localctx = new MidWordRefContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, HippolytusParser.RULE_midWordRef);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 150;
        _la = this._input.LA(1);
        if(_la===HippolytusParser.SEP || _la===HippolytusParser.COLON) {
            this.state = 149;
            this.sep();
        }

        this.state = 153;
        _la = this._input.LA(1);
        if(_la===HippolytusParser.NUM) {
            this.state = 152;
            this.numRef();
        }

        this.state = 155;
        this.wordRef();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LastWordRefContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = HippolytusParser.RULE_lastWordRef;
    return this;
}

LastWordRefContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LastWordRefContext.prototype.constructor = LastWordRefContext;

LastWordRefContext.prototype.wordRef = function() {
    return this.getTypedRuleContext(WordRefContext,0);
};

LastWordRefContext.prototype.sep = function() {
    return this.getTypedRuleContext(SepContext,0);
};

LastWordRefContext.prototype.numRef = function() {
    return this.getTypedRuleContext(NumRefContext,0);
};
